--- a/app/views/layouts/_user_side_bar.html.erb
+++ b/app/views/layouts/_user_side_bar.html.erb
@@ -1,6 +1,63 @@
- <div class="sidebar">
 
-  <nav>
+<style>
+body {
+  font-family: 'Lato', sans-serif;
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  display: none;
+  position: fixed;
+  z-index: 6;
+  top: 0;
+  left: 0;
+  background-color: rgb(77, 148, 255);
+  background-color: rgb(77, 148, 255, 0.9);
+}
+
+.overlay-content {
+  position: relative;
+  top: 25%;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
+  color: #FFF;
+  display: block;
+  transition: 0.3s;
+}
+
+.overlay a:hover, .overlay a:focus {
+  color: #f1f1f1;
+}
+
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+}
+
+@media screen and (max-height: 360px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
+  }
+}
+</style>
+
+<div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <div class="overlay-content">
+    <nav>
     <ul>
       <li>
         <%= link_to projects_path, class: "#{is_current_page?(projects_path)} item" do %>
@@ -9,5 +66,21 @@
       </li>
     </ul>
   </nav>
-
+  </div>
 </div>
+
+
+<span style="font-size:10px;cursor:pointer" onclick="openNav()" id="icon-menu-sidebar">&#9776; Menu lateral</span>
+
+<script>
+function openNav() {
+  document.getElementById("myNav").style.display = "block";
+}
+
+function closeNav() {
+  document.getElementById("myNav").style.display = "none";
+}
+</script>
+     
+</body>
+</html>
