fix mobile layout

--- a/app/assets/stylesheets/layout.css
+++ b/app/assets/stylesheets/layout.css
@@ -13,6 +13,14 @@
     margin-bottom: 20px;
 }
 
+span#icon-menu-sidebar{
+    position: absolute;
+    margin-top: 20px;
+    margin-left: -98px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
 #menu {
     position: relative;
 	background: rgb(100, 149, 237);
@@ -116,10 +124,13 @@
 }
 
 @media only screen and (max-width: 800px){
-  .sidebar nav {
-      display: none;
-  }
-
+    span#icon-menu-sidebar{
+        position: absolute;
+        margin-top: 20px;
+        margin-left: -98px;
+        font-size: 18px;
+    }
+    
   #menu label{
     float: left;
     padding-right: 10px;
@@ -223,8 +234,9 @@ div#notification_inactived {
     vertical-align: middle;
 }
 .container{
-  width: 88%;
-  margin-left:50px;
+  width: 100%;
+  margin-left:10px;
+  
 }
 
 .container_user {
@@ -972,11 +984,8 @@ th {
 /**********************************************************/
 @media only screen and (min-width: 1900px){
     .container{
-        width: 65%;
-        margin-left: 17%;      
-    }
-    div ul#icon-menu-mobile{
-        display: none;
+        width: 90%;
+        margin-left: 17px;      
     }
 }
 
@@ -1065,7 +1074,7 @@ th {
         float: left;
         width: 670px;
         margin-top: 20px; 
-        margin-left: 300px; 
+        margin-left: 10px; 
     }
 
     .align_right{
@@ -1270,13 +1279,34 @@ th {
         position: absolute;
         margin-top: 20px;
         margin-left: -88px;
+        cursor: pointer;
     }
 
     div#info_project{
-        position: absolute;
+        position: relative;
         margin-left: 20px;
+        margin-bottom:201px;
         width: 320px;
+        max-height: 1000px;
     }
+
+    div#info_project input, select{
+        width: 308px;
+    }
+
+    .form .blue_button {
+        background-color: #2185D0;
+        border-radius: 10px;
+        max-width: 295px;
+        border: none;
+        color: white;
+        padding: 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    }
+    
    .container .alert_success {
         position: absolute;
         padding: 35px;
@@ -1287,7 +1317,6 @@ th {
         color: white;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         z-index: 5;
-       
     }
 
     .closebtn {
@@ -1339,7 +1368,7 @@ th {
         font-family: 'Public Sans', sans-serif;
         color: #948F8F;
         font-size: 18px;
-        margin-left: 69px;
+        margin-left: 40px;
         width: 219px;
     }
 
@@ -1375,13 +1404,10 @@ th {
         float: left;
         margin-left: -20px;
     }
-
+   
     .box_center img{
-        margin-left: 80px;
-    }
-    
-    .box_center img{
-        margin-top: 40px;
+        margin-top: 10px;
+        margin-left: 10px;
         text-align: center;
     }
 
@@ -1414,7 +1440,7 @@ th {
     }    
 
     .content{
-        width: 290px;
+        width: 290px;width: 295px;
         margin-left: 3px;    
         padding-top: 15px;
         padding-bottom: 15px;
@@ -1463,8 +1489,8 @@ th {
     }
 
     .green_button{
-        width: 270px; 
-        margin: 30px;
+        width: 250px; 
+        margin: 25px;
     }
 
     .blue_button{
@@ -1474,21 +1500,35 @@ th {
 
     .red_button{
         width: 295px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
-    
+
+    .black_button{
+        width: 295px;
+        margin-bottom: 10px;
+    }
+
+    .orange_button{
+        width: 295px;
+        margin-bottom: 10px;
+    }
+
+    .panel{
+        padding: 0px;
+    }
+
     .container{
         width: 100px;
         margin-left: -120px;
     }
 
-    .button_warning{
+    .card .button_warning{
         background-color: #DB2828;
         border-radius: 5px;
         border: none;
         color: white;
         margin-top: 5px;
-        margin-left: -15px;
+        margin-left: -10px;
         padding-top: 5px;
         padding-bottom: 5px;
         width: 100%;
@@ -1505,7 +1545,7 @@ th {
         color: white;
         padding: 5px;
         width: 95%;
-        margin-left: -15px;
+        margin-left: -10px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
@@ -1514,7 +1554,7 @@ th {
 
     div#card_session{
         position: absolute;
-        margin-top:385px;
+        margin-top:465px;
         width: 340px;
     }
 
