--- a/app/views/function_user_projects/index.html.erb
+++ b/app/views/function_user_projects/index.html.erb
@@ -1,8 +1,10 @@
 <p></p>
 
-<div class="container">
+<div class="container" id="info_project">
   <div>
   <br />
+   <br />
+   <br />
     <h2>Membros</h2>
     
   </div>
