--- a/app/views/layouts/_admin_side_bar.html.erb
+++ b/app/views/layouts/_admin_side_bar.html.erb
@@ -79,7 +79,7 @@ body {
 </div>
 
 
-<span style="font-size:10px;cursor:pointer" onclick="openNav()" id="icon-menu-sidebar">&#9776; Menu lateral</span>
+<span onclick="openNav()" id="icon-menu-sidebar">&#9776; Menu lateral</span>
 
 <script>
 function openNav() {
