--- a/app/views/sprints/edit.html.erb
+++ b/app/views/sprints/edit.html.erb
@@ -1,7 +1,8 @@
 <br />
 
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
+  <br />
     <h2>Editando sprint</h2>
   </div>
 
