--- a/app/views/themes/new.html.erb
+++ b/app/views/themes/new.html.erb
@@ -1,5 +1,5 @@
 <br />
-<div class="container">
+<div class="container" id="info_project">
     <h2>Novo Tema</h2>
      <br />
     <%= render 'form' %>
