--- a/app/views/function_user_projects/new.html.erb
+++ b/app/views/function_user_projects/new.html.erb
@@ -1,6 +1,10 @@
-<br />
-<div class="container">
+
+<div class="container" id="info_project">
+ 
   <div>
+   <br />
+   <br />
+   <br />
     <h2>Novo membro</h2>
   </div>
 
