--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
     <br />
     <h2>Editando projeto</h2>
