--- a/app/views/projects/scrumboard.html.erb
+++ b/app/views/projects/scrumboard.html.erb
@@ -6,9 +6,11 @@
 </style>
 
 
-<div class="container">  
-<br />
-<h2>Board </h2>
+<div class="container" id="info_project">  
+    <br />
+    <br />
+    <br />
+<h2>Board</h2>
 <%= render 'projects/breadcrumb' %>
  <br />
  <br />
