--- a/app/views/releases/index.html.erb
+++ b/app/views/releases/index.html.erb
@@ -1,8 +1,10 @@
 <p></p>
 
-<div class="container">
+<div class="container" id="info_project">
   <div>
-  <br />
+    <br />
+    <br />
+    <br />
     <h2>Releases</h2>
   </div>
 
