--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -1,7 +1,9 @@
 <p></p>
 
-<div class="container">
+<div class="container" id="info_project">
   <div>
+  <br />
+  <br />
   <br />
     <h2>Sprints</h2>
   </p>
