--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -1,6 +1,6 @@
 <br />
 
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
     <h2>Nova sprint</h2>
   </div>
