--- a/app/views/themes/index.html.erb
+++ b/app/views/themes/index.html.erb
@@ -1,5 +1,7 @@
-<div class="container">
+<div class="container" id="info_project">
   <div>
+    <br />
+    <br />
     <br />
     <h2>Tema</h2>
   </div>
