--- a/app/views/user_stories/index.html.erb
+++ b/app/views/user_stories/index.html.erb
@@ -1,7 +1,9 @@
 
 
-<div class="container">
+<div class="container" id="info_project">
  
+      <br />
+      <br />
       <br />
       <h2>User Stories</h2>
 
