--- a/app/views/user_stories/new.html.erb
+++ b/app/views/user_stories/new.html.erb
@@ -1,5 +1,5 @@
 <br />
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
      <h2>Nova User Story</h2>
   </div>
