--- a/app/views/projects/scrumboard.html.erb
+++ b/app/views/projects/scrumboard.html.erb
@@ -59,14 +59,16 @@
 <br />
 <br />
 <br />
+<div id="info_project">  
+<div style="overflow-x: auto;">
   <table>
     <thead>
       <tr>
-        <th width="180">Pendente</th>
-        <th width="180">Desenvolvimento</th>
-        <th width="180">Code Review</th>
-        <th width="180">QA</th>
-        <th width="180">Concluído</th>
+        <th>Pendente</th>
+        <th>Desenvolvimento</th>
+        <th>Code Review</th>
+        <th>QA</th>
+        <th>Concluído</th>
       </tr>
     </thead>
 
@@ -520,6 +522,8 @@
       </tr>
     </tbody>
   </table>
+</div>
+</div>
 </div>
 </div>
 <% end %>
