--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,5 +1,5 @@
 <br />
-<div class="container">
+<div class="container" id="info_project">
 <br />
     <h2>Editando task</h2>  
     <%= render 'tasks/breadcrumb' %>
