--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,7 @@
 <br />
-<div class="container">
+<div class="container" id="info_project">
+<br />
+<br />
     <h2>Tasks</h2>   
     <%= render 'tasks/breadcrumb' %>
 </div>
