--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
+
 <br />
+
 <div class="container">
+
+
+<br /> <br />
   <div class="align_right">
         <%= form_tag(users_path, method: :get) do %>
               <%= text_field_tag :search, params[:search], placeholder: "Buscar usuários", class: "search_input" %>
@@ -15,19 +20,20 @@
  
  <%= link_to "Novo usuário", new_user_path, class: 'green_button', id: "btn_new_user" %>
 <br />   
- <br />   
- 
+ <br />  
+<div id="info_project">  
+<div style="overflow-x: auto;">
   <table>
-    <thead>
+  
       <tr>
-          <th width="180">Nome</th>
-          <th width="180">Email</th>
-          <th width="180">Grupo</th>
-          <th width="210">Ações</th>
+          <th>Nome</th>
+          <th>Email</th>
+          <th>Grupo</th>
+          <th>Ações</th>
       </tr>
-    </thead>
+  
 
-    <tbody>
+   
       <% @users.each do |user| %>
         <tr>
               <td>
@@ -43,14 +49,15 @@
                     <td><%= user.email %></td>
                     <td><%= user.group %></td>
           <td>
-              <%= link_to 'Editar', edit_user_path(user), class: 'blue_button' %>
-              <%= link_to 'Remover', user, method: :delete, data: { confirm: "Você tem certeza deletar o(a) usuário(a) #{ user.name } ?"}, class: 'red_button' %>
+              <%= link_to 'Editar', edit_user_path(user), class: 'blue_button', id: 'table_button' %>
+              <%= link_to 'Remover', user, method: :delete, data: { confirm: "Você tem certeza deletar o(a) usuário(a) #{ user.name } ?"}, class: 'red_button', id: 'table_button' %>
           </td>
         </tr>
       <% end %>
-    </tbody>
+   
   </table>
-
+</div>
+</div>
     <br />
     <%= paginate @users %>  
     <br />
