--- a/app/views/function_user_projects/edit.html.erb
+++ b/app/views/function_user_projects/edit.html.erb
@@ -1,6 +1,7 @@
 <br />
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
+  <br />
     <h2>Editando membro</h2>
   </div>
 
