--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,7 @@
 <br />
-<div class="container">
+<div class="container" id="info_project">
+  <br />
+  <br />
   <h2>Novo projeto</h2>
   <hr>
   <br />
