--- a/app/views/releases/edit.html.erb
+++ b/app/views/releases/edit.html.erb
@@ -1,6 +1,6 @@
 <p></p>
 
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
   <br />
     <h2>Editando release</h2>
