--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,6 +1,7 @@
 
 <br />
-<div class="container">
+<div class="container" id="info_project">
+<br />
   <h1>Configurações <%= image_tag("configuracao.png") %> </h1>
   <hr>
 
