--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -36,7 +36,7 @@
           content_style: 'body { font-family:Helvetica,Arial,sans-serif; font-size:14px }'
          });
  </script>
-<div class="container">
+<div class="container" id="info_project">
   <br >
   <br >
   
