--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -37,7 +37,7 @@
          });
  </script>
 
-<div class="container"> 
+<div class="container" id="info_project"> 
 <%= render 'tasks/breadcrumb' %>
     <div class="align_right">
       <%= link_to 'Nova task', new_task_path, class: 'green_button' %>
