--- a/app/views/themes/edit.html.erb
+++ b/app/views/themes/edit.html.erb
@@ -1,7 +1,8 @@
 <p></p>
 
-<div class="container">
+<div class="container" id="info_project">
   <div class="ui menu">
+  <br />
     <h2>Editando tema</h2>
   </div>
 
