--- a/app/views/user_stories/edit.html.erb
+++ b/app/views/user_stories/edit.html.erb
@@ -1,6 +1,6 @@
 <p></p>
 
-<div class="container">
+<div class="container" id="info_project">
 <br />
   <div class="ui menu">
     <h2>Editando User Story</h2>
