--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,7 @@
   
  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'form', method: :put }) do |f| %>
         
-        <div class="container"> 
+        <div class="container" id="info_project"> 
          <% if resource.errors.any? %>
    <br />
         <div class="alert_danger">
